[tool.poetry]
name = "polars-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "polars_project"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.14.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
